yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userinfo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: userinfo
  template:
    metadata:
      labels:
        name: userinfo
    spec:
      containers:
      - name: userinfo
        image: <OCIIMAGE>
