yaml/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: userinfo
  namespace: default
spec:
  hosts: ["app.<DOMAIN>"]
  #hosts: ["app.thindexed.personal.shoot.canary.k8s-hana.ondemand.com"]
  gateways: [ "gateway-app" ]
  http:
    - match:
      - uri:
          regex: "/userinfo.+"
      redirect:
        uri: "/userinfo"
    - match:
      - uri:
          exact: "/userinfo"
      route:
        - destination:
            host: userinfo
